# audible-youtube

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
app/: main.py  settings.py  utils.py
app/api/: dependencies.py  endpoints.py  errors.py  routes.py
app/api/errors/: http_error.py  validation_error.py
app/core/: events.py
app/db/: events.py
app/models/: common.py  schemas.py
app/models/domain/: video.py
app/resources/: details.py
app/services/: events.py  redis.py  youtube.py
audible_youtube/: main.py  settings.py
audible_youtube/api/: endpoints.py  routes.py  utils.py
audible_youtube/core/: events.py
audible_youtube/db/: events.py
audible_youtube/media/: When the comedic timing is just perfect~.1635777986.m4a
audible_youtube/models/: schemas.py
audible_youtube/services/: events.py  redis.py  youtube.py
example/: example_client.py
public/: index.html
youtube_to_audio/: main.py  settings.py
youtube_to_audio/api/: endpoints.py  routes.py  utils.py
youtube_to_audio/core/: events.py
youtube_to_audio/db/: events.py
youtube_to_audio/models/: common.py
youtube_to_audio/services/: youtube.py
