[tool.poetry]
authors = ["Hju Kneyck Mateo Flores <hjucode@gmail.com>"]
description = "Convert YouTube videos to audio files using REST API endpoints"
license = "MIT"
name = "audible-youtube"
version = "1.1.0-alpha.1"

[tool.poetry.dependencies]
aiofiles = "^0.7.0"
aioredis = {extras = ["hiredis"], version = "^2.0.0"}
asyncpg = "^0.24.0"
databases = "^0.5.3"
fastapi = {extras = ["all"], version = "^0.70.0"}
gunicorn = "^20.1.0"
loguru = "^0.5.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python = "3.9.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
rq = "^1.10.0"
slowapi = "^0.1.5"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
youtube-search-python = "^1.5.1"
youtube_dl = "^2021.6.6"
yt-dlp = "^2021.11.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pylint = "^2.11.1"
pyright = "^0.0.10"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

exclude = ["**/__pycache__"]
include = ["app"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonPlatform = "Linux"
pythonVersion = "3.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
